Fix button content alignment

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -178,7 +178,7 @@ p {
   gap: 12px;
 }
 
-a {
+.link-container > a {
   display: block;
   width: 100%;
 }
@@ -208,7 +208,6 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid #ffffff33; */
   border-radius: 12px;
   transition: all 300ms;
   /* border: 1px solid #ffffffaa; */
@@ -296,6 +295,11 @@ button.flo {
 button.flo:hover {
   background: #fff;
   color: var(--flo-primary);
+}
+
+.button-link-name {
+  width: 140px;
+  text-align: center;
 }
 
 footer {
